// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemPolicyCard component should render external policy 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-2"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-c-content margin-bottom-md"
    >
      <h4
        class="margin-bottom-top-none"
        data-pf-content="true"
      >
        <span
          width="0"
        >
          <span />
          <span>
            PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
          </span>
          <span
            style="position:fixed;visibility:hidden;top:0;left:0"
          >
            …
          </span>
        </span>
      </h4>
      External policy 
      <svg
        aria-hidden="true"
        class="grey-icon"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align:-0.125em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
        />
      </svg>
    </div>
    <div
      class="margin-bottom-md"
    >
      <div
        class="ins-c-policy-card ins-m-noncompliant"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
         Not compliant
      </div>
      <small
        class=""
        data-pf-content="true"
      >
        10 rules failed 
        <span
          aria-describedby="pf-tooltip-3"
        >
          (Score: 75%)
        </span>
      </small>
    </div>
    <small
      class="margin-bottom-none"
      data-pf-content="true"
    >
      <p
        class=""
        data-pf-content="true"
      >
        SSG version: 0.1.45
      </p>
      <p
        class=""
        data-pf-content="true"
      >
        Last scanned: 
        <span>
          6 months ago
        </span>
      </p>
    </small>
  </div>
</article>
`;

exports[`SystemPolicyCard component should render policy 1`] = `
<article
  class="pf-c-card"
  data-ouia-component-id="OUIA-Generated-Card-1"
  data-ouia-component-type="PF4/Card"
  data-ouia-safe="true"
  id=""
>
  <div
    class="pf-c-card__body"
  >
    <div
      class="pf-c-content margin-bottom-md"
    >
      <h4
        class="margin-bottom-top-none"
        data-pf-content="true"
      >
        <span
          width="0"
        >
          <span />
          <span>
            PCI-DSS Policy
          </span>
          <span
            style="position:fixed;visibility:hidden;top:0;left:0"
          >
            …
          </span>
        </span>
      </h4>
      <small
        class=""
        data-pf-content="true"
        style="color:var(--pf-global--Color--200)"
      >
        <span
          width="0"
        >
          <span />
          <span>
            PCI-DSS v3 Control Baseline for Red Hat Enterprise Linux 7
          </span>
          <span
            style="position:fixed;visibility:hidden;top:0;left:0"
          >
            …
          </span>
        </span>
      </small>
    </div>
    <div
      class="margin-bottom-md"
    >
      <div
        class="ins-c-policy-card ins-m-noncompliant"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align:-0.125em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
         Not compliant
      </div>
      <small
        class=""
        data-pf-content="true"
      >
        10 rules failed 
        <span
          aria-describedby="pf-tooltip-1"
        >
          (Score: 75%)
        </span>
      </small>
    </div>
    <small
      class="margin-bottom-none"
      data-pf-content="true"
    >
      <p
        class=""
        data-pf-content="true"
      >
        SSG version: 0.1.45
      </p>
      <p
        class=""
        data-pf-content="true"
      >
        Last scanned: 
        <span>
          6 months ago
        </span>
      </p>
    </small>
  </div>
</article>
`;
